# edi

./: .gitignore  835-2.json  AmazonQ.md  C1_FIX_PLAN.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  FIXUP_PROGRESS.md  FIX_PLANS.md  LICENSE  PROJECT_STATUS.md  README.md  VALIDATION_REPORT.md
.amazonq/: EDI276_277_Analysis.md  EDI999_Implementation_Status.md  EDI_to_JSON_Converter_Specification.md  Implementation_Results_and_Improvements.md  Implementation_Status.md  PROJECT_SUMMARY.md  Phase2_279_Implementation_Results.md  Phase2_279_Testing_Results.md  Phase2_Comprehensive_Testing.md  Phase2_EDI271_Improvements.md  Phase2_EDI835_Issues.md  Phase2_EDI835_Refactoring_Plan.md  Phase2_EDI999_Final_Fixes.md  Phase2_EDI999_Fixes.md  Phase2_Implementation_Context.md  Phase2_Implementation_Documentation.md  Phase2_Implementation_Plan.md  Phase2_Implementation_Progress.md  Phase2_Segment_Order_Improvements.md  Phase2_Testing_Results.md  Phase2_Updated_Next_Steps.md  Phase2_Warnings.md  Phase3_Implementation_Plan.md  Phase3_Implementation_Status.md  Project_Specification_and_Overview.md  README.md  Remaining_Tasks.md  Testing_Results_May_2025.md  Testing_Results_and_Analysis.md  status.md  tasks.md  test_summary.md  test_summary_after_fixes.md
.kiro/: implementation-summary.md  project-status.md  project-tasks.md
.spec/: Phase2_EDI835_Testing.md  Phase2_Implementation_Context.md  Phase2_Implementation_Progress.md  Phase2_Next_Steps.md  Phase2_Warnings.md  missing_tesets.md
demo/: edi270-demo-005010X279.edi  edi271-demo-005010X279.edi  edi835-1.edi  (+10 more)
(+252 files in other folders)
