[package]
name = "edi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"


# [build]
# profiler = true
